add test helpers